--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Dompet",
   "version": "0.1.0",
-  "homepage": "https://dompet.dexignlab.com/react/demo",
+  "homepage": "https://wavesafe.io",
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
