--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@testing-library/user-event": "^12.2.2",
     "@tinymce/tinymce-react": "^3.10.1",
     "@waves.exchange/provider-web": "^1.1.1",
-    "@waves/signer": "1.0.5",
+    "@waves/signer": "^1.0.7",
     "@y0c/react-datepicker": "^1.0.4",
     "apexcharts": "^3.22.2",
     "axios": "^0.21.1",
