--- a/smart-contract/surfboard.config.json
+++ b/smart-contract/surfboard.config.json
@@ -13,6 +13,12 @@
             "CHAIN_ID": "T",
             "SEED": "gesture bubble opinion version tackle fun oak fatal leaf hidden process frown sfsfs",
             "timeout": 60000
+        },
+        "mainnet": {
+            "API_BASE": "https://nodes.wavesnodes.com/",
+            "CHAIN_ID": "W",
+            "SEED": "gesture bubble opinion version tackle fun oak fatal leaf hidden process frown sfsfs 12",
+            "timeout": 60000
         }
     },
     "defaultEnv": "testnet",
