--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-table": "^7.7.0",
     "react-times": "^3.1.12",
     "react-toastify": "^6.1.0",
+    "react-tooltip": "^4.2.21",
     "reactstrap": "^8.9.0",
     "recharts": "^1.8.5",
     "redux-form": "^8.3.7",
