--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/user-event": "^12.2.2",
     "@tinymce/tinymce-react": "^3.10.1",
     "@waves.exchange/provider-web": "^1.1.1",
+    "@waves/provider-keeper": "^1.0.2",
     "@waves/signer": "^1.0.7",
     "@y0c/react-datepicker": "^1.0.4",
     "apexcharts": "^3.22.2",
